# voice-todos

./: .env.dev  .gitignore  AGENTS.md  learnings.md  project-framing.md  skills-lock.json
backend/: .env.example  pyproject.toml  ruff.toml
backend/app/: backend_env.py  config.py  extract.py  extraction_loop.py  extraction_thresholds.py  live_eval_env.py  logfire_setup.py  main.py  model_providers.py  models.py  repo_env.py  session_recorder.py  stt.py  stt_factory.py  stt_mistral.py  stt_mistral_probe.py  stt_smoke.py  stt_soniox.py  transcript_accumulator.py  ws.py
backend/tests/: test_benchmark_cli.py  test_benchmark_coverage.py  test_benchmark_definitions.py  test_benchmark_extraction_runner.py  test_benchmark_logfire_query.py  test_benchmark_manifest.py  test_benchmark_replay_runner.py  test_benchmark_report.py  test_benchmark_report_html.py  test_benchmark_reporting.py  test_benchmark_staleness_report.py  test_benchmark_suite_adapters.py  test_config.py  test_e2e.py  test_eval_experiment_metadata.py  test_eval_logfire_enrichment.py  test_eval_reporting.py  test_eval_retry_policy.py  test_extract.py  test_extraction_dataset_loader.py  test_extraction_evaluators.py  test_extraction_loop.py  test_extraction_runner.py  test_hosted_dataset_bootstrap.py  test_hosted_dataset_locking.py  test_incremental_dataset_loader.py  test_incremental_extraction_evaluators.py  test_incremental_extraction_runner.py  test_incremental_replay_case_builder.py  test_incremental_soniox_trace_adapter.py  test_item7_benchmark_cli.py  test_item7_benchmark_definitions.py  test_live_eval_env.py  (+24 more)
(+260 files in other folders)
