[project]
name = "voice-todos-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "pydantic-ai[google]>=1.70.0",
    "pydantic-settings>=2.13.1",
    "soniox>=2.2.0",
    "uvicorn[standard]>=0.42.0",
    "websockets>=16.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]
